--- a/Desktop/chatserver/package.json
+++ b/Desktop/chatserver/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
+    "redis": "^4.6.12",
     "socket.io": "^4.7.4",
     "yup": "^1.3.3"
   }
